@@ -43,10 +43,13 @@ int main(void)
   const char *data_gz = "dirfile/data.gz";
   const char *data = "dirfile/data";
   const char *format_data = "data RAW UINT8 8\n";
-  uint8_t c[8], d;
+  uint8_t c[8];
+#ifdef USE_GZIP
   char command[4096];
+  uint8_t d;
+#endif
   struct stat buf;
-  int fd, i, n, error, r = 0;
+  int fd, i, n, error, stat_data, unlink_data, unlink_datagz, r = 0;
   DIRFILE *D;
 
   memset(c, 0, 8);
@@ -60,17 +63,27 @@ int main(void)
   write(fd, format_data, strlen(format_data));
   close(fd);
 
+#ifdef USE_GZIP
   D = gd_open(filedir, GD_RDWR | GD_GZIP_ENCODED | GD_VERBOSE);
+#else
+  D = gd_open(filedir, GD_RDWR | GD_GZIP_ENCODED);
+#endif
   n = gd_putdata(D, "data", 5, 0, 1, 0, GD_UINT8, c);
   error = gd_error(D);
 
   gd_close(D);
 
-  if (stat(data_gz, &buf)) {
+  stat_data = stat(data_gz, &buf);
+#ifdef USE_GZIP
+  if (stat_data) {
     perror("stat");
-    r = 1;
   }
+  CHECKI(stat_data, 0);
+#else
+  CHECKI(stat_data, -1);
+#endif
 
+#ifdef USE_GZIP
   /* uncompress */
   snprintf(command, 4096, "%s -f %s > /dev/null", GUNZIP, data);
   if (gd_system(command)) {
@@ -90,13 +103,24 @@ int main(void)
       close(fd);
     }
   }
+#endif
 
-  unlink(data);
+  unlink_datagz = unlink(data_gz);
+  unlink_data = unlink(data);
   unlink(format);
   rmdir(filedir);
 
+#ifdef USE_GZIP
+  CHECKI(unlink_datagz, 0);
+  CHECKI(unlink_data, -1);
   CHECKI(error, GD_E_OK);
   CHECKI(n, 8);
+#else
+  CHECKI(unlink_datagz, -1);
+  CHECKI(unlink_data, -1);
+  CHECKI(error, GD_E_UNSUPPORTED);
+  CHECKI(n, 0);
+#endif
 
   return r;
 #endif
