@@ -43,7 +43,7 @@ int main(void)
   const char *data = "dirfile/data.gz";
   const char *format_data = "data RAW UINT8 8\n";
   uint8_t c[8], d[8];
-  int fd, i, m, n, e1, e2, r = 0;
+  int fd, i, m, n, e1, e2, unlink_data, r = 0;
   DIRFILE *D;
 
   memset(c, 0, 8);
@@ -57,7 +57,11 @@ int main(void)
   write(fd, format_data, strlen(format_data));
   close(fd);
 
+#ifdef USE_GZIP
   D = gd_open(filedir, GD_RDWR | GD_GZIP_ENCODED | GD_VERBOSE);
+#else
+  D = gd_open(filedir, GD_RDWR | GD_GZIP_ENCODED);
+#endif
   n = gd_putdata(D, "data", 5, 0, 1, 0, GD_UINT8, c);
   e1 = gd_error(D);
   m = gd_getdata(D, "data", 5, 0, 1, 0, GD_UINT8, d);
@@ -65,14 +69,23 @@ int main(void)
 
   gd_close(D);
 
-  unlink(data);
+  unlink_data = unlink(data);
   unlink(format);
   rmdir(filedir);
 
+#ifdef USE_GZIP
+  CHECKI(unlink_data, 0);
   CHECKI(e1, GD_E_OK);
   CHECKI(e2, GD_E_OK);
   CHECKI(n, 8);
   CHECKI(m, 8);
+#else
+  CHECKI(unlink_data, -1);
+  CHECKI(e1, GD_E_UNSUPPORTED);
+  CHECKI(e2, GD_E_UNSUPPORTED);
+  CHECKI(n, 0);
+  CHECKI(m, 0);
+#endif
   
   for (i = 0; i < m; ++i)
     CHECKIi(i, d[i], c[i]);
